--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -110,19 +110,20 @@ jobs:
           echo "Running production build..."
           npm run build:prod
 
-      - name: get-npm-version
+      - name: Get application version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@main
 
-      - uses: montudor/action-zip@v1
+      - name: Compress artifacts
+        uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}-${{ github.run_attempt }}-SNAPSHOT.zip" build
+          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_attempt }}-SNAPSHOT.zip" build
 
-      - name: publish to artifactory
+      - name: Publish to artifactory
         uses: advancedcsg-open/action-jfrog-cli@master
         with:
           url: 'https://ahamedrepo.jfrog.io/artifactory/'
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
-          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}-${{ github.run_attempt }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
+          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_attempt }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
