--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Commit History
+        run: |
+          git log "${github.ref_name}"
+
       - name: Download binary
         uses: actions/setup-node@v3
         with:
