commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Commit History
         run: |
-          git log "${github.ref_name}"
+          git log "${{ github.ref_name }}"
 
       - name: Download binary
         uses: actions/setup-node@v3
