--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -105,7 +105,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   publish:
-    if: inputs.action == 'dev'
+    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release'))
     name: Publish Artifacts
     strategy:
       fail-fast: true
@@ -125,14 +125,14 @@ jobs:
           path: node_modules
           key: node-modules-${{ hashFiles('package-lock.json') }}
 
+      - name: Get application version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@main
+
       - name: Create artifacts
         run: |
           echo "Running production build..."
           npm run build:prod
-
-      - name: Get application version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@main
 
       - name: Compress artifacts
         uses: montudor/action-zip@v1
