--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -16,6 +16,9 @@ on:
           - dev
           - prod
 
+env:
+  ACTION: ${{ inputs.action }}
+
 jobs:
   build:
     name: Build
@@ -105,7 +108,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   publish:
-    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
+    if: ACTION == 'Build' || ACTION == 'dev' || (ACTION == 'prod' && contains(github.ref_name, 'release/'))
     name: Publish Artifacts
     strategy:
       fail-fast: true
