--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -15,13 +15,14 @@ on:
           - Build
           - dev
           - prod
-
-env:
-  ACTION: ${{ inputs.action }}
+      deployFromArtifactory:
+        type: boolean
+        description: Deploy from artifactory?
 
 jobs:
   build:
     name: Build
+    if:
     strategy:
       fail-fast: true
       matrix:
@@ -34,6 +35,7 @@ jobs:
 
       - name: Commit History
         run: |
+          echo "${{ inputs.deployFromArtifactory }}"
           git log --pretty=format:"%h %ad%x09%an%x09%s" --date=short --first-parent "${{ github.ref_name }}"  | head -20
 
       - name: Download binary
@@ -108,8 +110,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   publish:
-    if: env.ACTION == 'Build' || env.ACTION == 'dev' || (env.ACTION == 'prod' && contains(github.ref_name, 'release/'))
     name: Publish Artifacts
+    if: inputs.action == 'Build' || inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
     strategy:
       fail-fast: true
     needs: build
@@ -151,8 +153,8 @@ jobs:
           args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
   deploy_to_dev:
-    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
     name: Deploy to Dev
+    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
     strategy:
       fail-fast: true
     needs: publish
