--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Commit History
         run: |
-          echo "${{ inputs.deployFromArtifactory }}"
+          echo "$inputs.deployFromArtifactory"
           git log --pretty=format:"%h %ad%x09%an%x09%s" --date=short --first-parent "${{ github.ref_name }}"  | head -20
 
       - name: Download binary
