commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -19,6 +19,9 @@ on:
         type: boolean
         description: Deploy from artifactory?
 
+env:
+  INPUT_DEPLOY_FROM_ARTIFACTORY: ${{ inputs.deployFromArtifactory }}
+
 jobs:
   build:
     name: Build
