--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -21,15 +21,15 @@ on:
       artifactVersion:
         description: Specify artifact version
 
-env:
-  INPUT_DEPLOY_FROM_ARTIFACTORY: ${{ inputs.deployFromArtifactory }}
-  INPUT_ACTION: ${{ inputs.action }}
-  INPUT_ARTIFACT_VERSION: ${{ inputs.artifactVersion }}
+#env:
+#  INPUT_DEPLOY_FROM_ARTIFACTORY: ${{ inputs.deployFromArtifactory }}
+#  INPUT_ACTION: ${{ inputs.action }}
+#  INPUT_ARTIFACT_VERSION: ${{ inputs.artifactVersion }}
 
 jobs:
   build:
     name: Build
-    if:
+    if: deployFromArtifactory == false
     strategy:
       fail-fast: true
       matrix:
@@ -159,7 +159,7 @@ jobs:
 
   deploy_to_dev:
     name: Deploy to Dev
-    if: ${{ env.INPUT_ACTION == 'dev' || (env.INPUT_ACTION == 'prod' && contains(github.ref_name, 'release/')) }}
+    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
     strategy:
       fail-fast: true
     needs: publish
