commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -29,7 +29,7 @@ on:
 jobs:
   build:
     name: Build
-    if: deployFromArtifactory == false
+    if: inputs.deployFromArtifactory == 'false'
     strategy:
       fail-fast: true
       matrix:
