--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -69,6 +69,7 @@ jobs:
 
   test:
     name: Test
+    if: inputs.deployFromArtifactory == 'false'
     strategy:
       fail-fast: true
     needs: build
@@ -92,6 +93,7 @@ jobs:
 
   security:
     name: Vulnerability Scan
+    if: inputs.deployFromArtifactory == 'false'
     strategy:
       fail-fast: true
     needs: test
@@ -117,6 +119,7 @@ jobs:
 
   publish:
     name: Publish Artifacts
+    if: inputs.deployFromArtifactory == 'false'
     strategy:
       fail-fast: true
     needs: build
@@ -159,7 +162,7 @@ jobs:
 
   deploy_to_dev:
     name: Deploy to Dev
-    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
+    if: always() && (inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/')) || inputs.deployFromArtifactory == 'true')
     strategy:
       fail-fast: true
     needs: publish
