--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -162,7 +162,7 @@ jobs:
 
   deploy_to_dev:
     name: Deploy to Dev
-    if: always() && (inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/')) || inputs.deployFromArtifactory == true)
+    if: always() && (inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))) || inputs.deployFromArtifactory == true
     strategy:
       fail-fast: true
     needs: publish
