--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -15,21 +15,11 @@ on:
           - Build
           - dev
           - prod
-      deployFromArtifactory:
-        type: boolean
-        description: Deploy from artifactory?
-      artifactVersion:
-        description: Specify artifact version
-
-#env:
-#  INPUT_DEPLOY_FROM_ARTIFACTORY: ${{ inputs.deployFromArtifactory }}
-#  INPUT_ACTION: ${{ inputs.action }}
-#  INPUT_ARTIFACT_VERSION: ${{ inputs.artifactVersion }}
 
 jobs:
   build:
     name: Build
-    if: inputs.deployFromArtifactory == false
+    if:
     strategy:
       fail-fast: true
       matrix:
@@ -69,7 +59,6 @@ jobs:
 
   test:
     name: Test
-    if: inputs.deployFromArtifactory == false
     strategy:
       fail-fast: true
     needs: build
@@ -93,7 +82,6 @@ jobs:
 
   security:
     name: Vulnerability Scan
-    if: inputs.deployFromArtifactory == false
     strategy:
       fail-fast: true
     needs: test
@@ -119,7 +107,7 @@ jobs:
 
   publish:
     name: Publish Artifacts
-    if: inputs.deployFromArtifactory == false
+    if: inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
     strategy:
       fail-fast: true
     needs: build
@@ -162,7 +150,6 @@ jobs:
 
   deploy_to_dev:
     name: Deploy to Dev
-    if: always() && (inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))) || inputs.deployFromArtifactory == true
     strategy:
       fail-fast: true
     needs: publish
