--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -130,6 +130,17 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@main
 
+      - name: Name Output file
+        id: set-variable
+        run: |
+          if [ ${{ inputs.action == 'prod' && contains(github.ref_name, 'release/') }} ]; then
+            echo "Release branch"
+            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip"
+          else
+            echo "Feature branch"
+            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip"
+          fi
+        shell: bash
       - name: Create artifacts
         run: |
           echo "Running production build..."
@@ -138,7 +149,7 @@ jobs:
       - name: Compress artifacts
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" build
+          args: zip -qq -r "${{ env.file-name }}" build
 
       - name: Publish to artifactory
         uses: advancedcsg-open/action-jfrog-cli@master
@@ -146,7 +157,7 @@ jobs:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
-          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
+          args: upload "${{ env.file-name }}" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
   deploy_to_dev:
     name: Deploy to Dev
