--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -135,7 +135,7 @@ jobs:
         run: |
           if [ ${{ inputs.action == 'prod' && !contains(github.ref_name, 'release/') }} ]; then
             echo "Release branch"
-            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" >> $GITHUB_ENV
+            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}.zip" >> $GITHUB_ENV
           else
             echo "Feature branch"
             echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" >> $GITHUB_ENV
