--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -161,7 +161,7 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@main
 
-      - name: Decide artifact file name
+      - name: Generate artifact file name
         id: set-variable
         run: |
           if [ ${{ inputs.action == 'prod' && contains(github.ref_name, 'release/') }} ]; then
@@ -204,10 +204,10 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@main
 
-      - name: Format file name
+      - name: Generate artifact file name
         id: set-variable
         run: |
-          if [ ${{ inputs.deployFromArtifactory == true }} ]; then
+          if [ ${{ inputs.deployFromArtifactory == 'true' }} ]; then
             echo "file-name=${{ inputs.artifactVersion }}" >> $GITHUB_ENV
           else
             echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" >> $GITHUB_ENV
