commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -210,9 +210,22 @@ jobs:
           if [ ${{ inputs.deployFromArtifactory == 'true' }} ]; then
             echo "file-name=${{ inputs.artifactVersion }}" >> $GITHUB_ENV
           else
+            echo "Deploy "
             echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" >> $GITHUB_ENV
           fi
         shell: bash
+
+#      - name: Generate artifact file name
+#        id: set-variable
+#        run: |
+#          if [ ${{ inputs.action == 'prod' && contains(github.ref_name, 'release/') }} ]; then
+#            echo "Release branch"
+#            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}.zip" >> $GITHUB_ENV
+#          else
+#            echo "Feature branch"
+#            echo "file-name=my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" >> $GITHUB_ENV
+#          fi
+#        shell: bash
 
       - name: Get artifacts
         uses: advancedcsg-open/action-jfrog-cli@master
