commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -241,7 +241,7 @@ jobs:
           args: unzip -qq "${{ env.file-name1 }}" -d build
 
       - name: Check
-        runs: |
+        run: |
           pwd
           ls
 
