--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -180,11 +180,17 @@ jobs:
           args: unzip -qq "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" -d build
 
 
-      - name: Deploy to Cloud
-        uses: nwtgck/actions-netlify@v1.2
+#      - name: Deploy to Cloud
+#        uses: nwtgck/actions-netlify@v1.2
+#        with:
+#          publish-dir: 'build'
+#          deploy-message: "Deploy from GitHub Actions"
+#        env:
+#          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+#          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      - uses: jsmrcaga/action-netlify-deploy@master
         with:
-          publish-dir: 'build'
-          deploy-message: "Deploy from GitHub Actions"
-        env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
+          NETLIFY_DEPLOY_TO_PROD: true
