commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -199,6 +199,7 @@ jobs:
       - name: Deploy draft to Netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
         with:
+          github-token: ${{ secrets.GH_TOKEN }}
           netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
           build-dir: './build'
