--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -180,14 +180,14 @@ jobs:
           args: unzip -qq "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" -d build
 
 
-#      - name: Deploy to Cloud
-#        uses: nwtgck/actions-netlify@v1.2
-#        with:
-#          publish-dir: 'build'
-#          deploy-message: "Deploy from GitHub Actions"
-#        env:
-#          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-#          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      - name: Deploy to Cloud
+        uses: nwtgck/actions-netlify@v1.2
+        with:
+          publish-dir: 'build'
+          deploy-message: "Deploy from GitHub Actions"
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 #      - uses: jsmrcaga/action-netlify-deploy@master
 #        with:
 #          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
@@ -196,10 +196,10 @@ jobs:
 #          NETLIFY_DEPLOY_TO_PROD: true
 #          build_command: "npm run build:prod"
 
-      - name: Deploy draft to Netlify
-        uses: South-Paw/action-netlify-deploy@v1.2.0
-        with:
-          github-token: ${{ secrets.GH_TOKEN }}
-          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-          build-dir: './build'
+#      - name: Deploy draft to Netlify
+#        uses: South-Paw/action-netlify-deploy@v1.2.0
+#        with:
+#          github-token: ${{ secrets.GH_TOKEN }}
+#          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+#          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+#          build-dir: './build'
