--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -190,14 +190,14 @@ jobs:
           cd ..
           pwd
 
-      - name: Deploy to Cloud
-        uses: nwtgck/actions-netlify@v1.2
-        with:
-          publish-dir: './build'
-          deploy-message: "Deploy from GitHub Actions"
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+#      - name: Deploy to Cloud
+#        uses: nwtgck/actions-netlify@v1.2
+#        with:
+#          publish-dir: './build'
+#          deploy-message: "Deploy from GitHub Actions"
+#        env:
+#          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+#          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 #      - uses: jsmrcaga/action-netlify-deploy@master
 #        with:
 #          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
@@ -213,3 +213,11 @@ jobs:
 #          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
 #          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
 #          build-dir: './build'
+
+      - name: Publish
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=site --functions=functions
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
