--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -166,6 +166,14 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@main
 
+      - name: Switch directory to workspace
+        run: |
+          echo "Geeting files"
+          pwd
+          cd github/workspace
+          pwd
+
+
       - name: Get artifacts
         uses: advancedcsg-open/action-jfrog-cli@master
         with:
@@ -178,13 +186,6 @@ jobs:
         uses: montudor/action-zip@v1
         with:
           args: unzip -qq "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" -d build
-
-
-      - name: Create artifacts
-        run: |
-          echo "Geeting files"
-          pwd
-          ls
 
 
 #      - name: Deploy to Cloud
